# otracer

./: .gitignore  dune-project  otracer.opam  scene.toml
_build/: .db  .digest-db  log
_build/default/: otracer.dune-package  otracer.install  otracer.opam
_build/default/lib/: params.ml  quaternion.ml  raytracing.cma  raytracing.cmxa  raytracing.cmxs  raytracing.ml-gen  sphere.ml  typedefs.ml  vect.ml
_build/default/lib/.merlin-conf/: lib-raytracing
_build/default/lib/.raytracing.objs/: camera.ml.d  light.ml.d  params.ml.d  quaternion.ml.d  raytracing__Camera.impl.all-deps  raytracing__Light.impl.all-deps  raytracing__Quaternion.impl.all-deps  raytracing__Sphere.impl.all-deps  scene.ml.d  sphere.ml.d  typedefs.ml.d  vect.ml.d
_build/default/lib/.raytracing.objs/byte/: raytracing.cmi  raytracing.cmo  raytracing.cmt  raytracing__Camera.cmi  raytracing__Camera.cmo  raytracing__Camera.cmt  raytracing__Light.cmi  raytracing__Light.cmo  raytracing__Light.cmt  raytracing__Params.cmi  raytracing__Params.cmo  raytracing__Params.cmt  raytracing__Quaternion.cmi  raytracing__Quaternion.cmo  (+13 more)
_build/default/test/: vect_test.ml
_build/default/test/.merlin-conf/: exe-vect_test-d8128b0b12e5f82d10d2ed2a8dd6f9f2
_build/default/test/.vect_test.eobjs/: dune__exe.ml-gen  quaternions_test.ml.d  quaternions_test.mli.d  sphere_test.ml.d  sphere_test.mli.d  vect_test.ml.d  vect_test.mli.d
lib/: camera.ml  dune  light.ml  params.ml  photontree.ml  plane.ml  scene.ml  scene_loader.ml  sphere.ml  typedefs.ml
test/: dune  photontree_test.ml  quaternions_test.ml  sphere_test.ml
(+25 files in other folders)
